<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/healer_classLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/healer_classText" />

    <TextView
        android:id="@+id/healer_strengthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/healer_strengthBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/healer_strengthText" />

    <TextView
        android:id="@+id/healer_intellectLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/healer_intellectBar"
        android:layout_alignLeft="@+id/healer_wisdomLabel"
        android:layout_alignStart="@+id/healer_wisdomLabel"
        android:layout_marginBottom="17dp"
        android:text="@string/healer_intellectText" />

    <TextView
        android:id="@+id/healer_wisdomLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/healer_strengthLabel"
        android:layout_alignRight="@+id/healer_strengthLabel"
        android:layout_centerVertical="true"
        android:text="@string/healer_wisdomText" />

    <TextView
        android:id="@+id/healer_dexterityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/healer_dexterityBar"
        android:layout_alignLeft="@+id/healer_wisdomLabel"
        android:layout_alignStart="@+id/healer_wisdomLabel"
        android:layout_marginBottom="16dp"
        android:text="@string/healer_DexterityText" />

    <RatingBar
        android:id="@+id/healer_strengthBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/healer_classLabel"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginTop="22dp" />

    <RatingBar
        android:id="@+id/healer_intellectBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/healer_strengthBar"
        android:layout_alignStart="@+id/healer_strengthBar"
        android:layout_below="@+id/healer_strengthBar"
        android:layout_marginTop="28dp" />

    <RatingBar
        android:id="@+id/healer_wisdomBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/healer_intellectBar"
        android:layout_alignStart="@+id/healer_intellectBar"
        android:layout_centerVertical="true" />

    <RatingBar
        android:id="@+id/healer_dexterityBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/healer_wisdomBar"
        android:layout_alignStart="@+id/healer_wisdomBar"
        android:layout_below="@+id/healer_wisdomBar"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/healer_pointsLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/healer_wisdomLabel"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/healer_wisdomLabel"
        android:layout_marginBottom="54dp"
        android:text="@string/healer_pointsText" />

    <TextView
        android:id="@+id/warrior_PointsLeftNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/healer_classLabel"
        android:layout_alignStart="@+id/healer_classLabel"
        android:layout_alignTop="@+id/healer_pointsLeft"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:text="@string/healer_pointsNumber" />

</RelativeLayout>
